# httpx-curl-cffi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
httpx_curl_cffi/: __init__.py  transport.py
tests/: conftest.py  test_client.py
